--- a/src/main/webui/src/index.scss
+++ b/src/main/webui/src/index.scss
@@ -37,6 +37,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
 h1 {
@@ -167,17 +169,8 @@ button:focus-visible {
 }
 
 
-/*
- * Base structure
- */
-
-body {
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-}
-
 .cover-container {
-  //max-width: 42em;
+  /* max-width: 42em; */
 }
 
 
@@ -203,5 +196,5 @@ body {
   color: rgba(255, 255, 255, 0.5);
   border-bottom-color: #fff;
 }
-// Import all of Bootstrap's CSS
+/* Import all of Bootstrap's CSS */
 @import "node_modules/bootstrap/scss/bootstrap";
