--- a/src/main/webui/src/index.scss
+++ b/src/main/webui/src/index.scss
@@ -30,6 +30,13 @@ a {
 a:hover {
   color: #535bf2;
 }
+a:visited {
+  color: inherit;
+}
+a:focus {
+  color: inherit;
+  outline: none;
+}
 
 body {
   margin: 0;
@@ -149,6 +156,13 @@ body.high-contrast *:focus-visible {
   }
   a:hover {
     color: #747bff;
+  }
+  a:visited {
+    color: inherit;
+  }
+  a:focus {
+    color: inherit;
+    outline: none;
   }
   button {
     background-color: #f9f9f9;
@@ -349,6 +363,7 @@ body.high-contrast *:focus-visible {
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
+  color: rgba(140, 140, 140, 0.5);
   border-bottom-color: rgba(69, 69, 69, 0.25);
 }
 
@@ -357,6 +372,13 @@ body.high-contrast *:focus-visible {
 }
 
 .nav-masthead .active {
+  color: rgba(255, 255, 255, 0.5);
+  border-bottom-color: #fff;
+}
+
+.nav-masthead .active:hover,
+.nav-masthead .active:focus,
+.nav-masthead .active:active {
   color: rgba(255, 255, 255, 0.5);
   border-bottom-color: #fff;
 }
